Add the ball's bounce through the paddle and scores

--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PONG</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
+    <div id="score">
+        <div id="player-score"></div>
+        <div id="ai-score"></div>
+
+    </div>
     <canvas></canvas>
-    <script src="app.js"></script>
+    <script type="module" src="app.js"></script>
 
 </body>
 
